<resources>
    <string name="hello_blank_fragment">test test</string>
    <string name="Welcome">"Welcome</string>
    <string name="app_name">Weather</string>
    <string name="hello">helloWorld</string>
    <string name="weather_alerts">weather alerts</string>
    <string name="favorite">Favorite</string>
    <string name="settings">settings</string>
    <string name="City">City</string>
    <string name="more">more</string>
    <string name="temperature">temperature</string>
    <string name="time">12:00</string>
    <string name="tempunit_celsius">°C</string>
    <string name="tempunit_fahrenheit">°F</string>
    <string name="tempunit_kelvin">°K</string>

    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="language">language</string>
    <string name="units">units</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="save">save</string>
    <string name="home">Home</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">humidity</string>
    <string name="map">map</string>
    <string name="add">add</string>
    <string name="add_location">add Location</string>
    <string name="search">search</string>
    <string name="location">location</string>
    <string name="cloud">Cloud</string>
    <string name="visibility">Visibility</string>
    <string name="arabic">arabic</string>
    <string name="english">english</string>
    <string name="speed">speed</string>
    <string name="m_s">m/s</string>
    <string name="mil_h">mil/h</string>
    <string name="m">km</string>
    <string name="hpa">hpa</string>
    <string name="cancel">cancel</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="not_found">not Found</string>
    <string name="delete">Delete</string>

    <string name="rm_msg">Do you want to remove this city from your favourites?</string>

</resources>