<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SettingsFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1">

            <TextView
                android:id="@+id/temp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                app:layout_constraintStart_toStartOf="@+id/temp_group"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/temp_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temp_title">

                <RadioButton
                    android:id="@+id/C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempunit_celsius" />

                <RadioButton
                    android:id="@+id/F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempunit_fahrenheit" />

                <RadioButton
                    android:id="@+id/K"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempunit_kelvin" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="right"-->
<!--            android:layout_weight="1">-->

<!--            <TextView-->
<!--                android:id="@+id/units_title"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/units"-->
<!--                app:layout_constraintStart_toStartOf="@+id/units_group"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <RadioGroup-->
<!--                android:id="@+id/units_group"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/units_title">-->

<!--                <RadioButton-->
<!--                    android:id="@+id/metric"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/metric" />-->

<!--                <RadioButton-->
<!--                    android:id="@+id/imperial"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/imperial" />-->
<!--            </RadioGroup>-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1">-->

<!--            <TextView-->
<!--                android:id="@+id/language_title"-->
<!--                android:layout_width="70dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/language"-->
<!--                app:layout_constraintStart_toStartOf="@+id/language_group"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <RadioGroup-->
<!--                android:id="@+id/language_group"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/language_title">-->

<!--                <RadioButton-->
<!--                    android:id="@+id/arabic"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/arabic" />-->

<!--                <RadioButton-->
<!--                    android:id="@+id/english"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/english" />-->
<!--            </RadioGroup>-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="@+id/location_group"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/location_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_title">

                <RadioButton
                    android:id="@+id/gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="gps" />

                <RadioButton
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="map" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1">

            <TextView
                android:id="@+id/speed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                app:layout_constraintStart_toStartOf="@+id/speed_group"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/speed_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speed_title">

                <RadioButton
                    android:id="@+id/meter_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m_s" />

                <RadioButton
                    android:id="@+id/mile_h"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mil_h" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/language_title"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="@+id/language_group"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/language_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_title">

                <RadioButton
                    android:id="@+id/arabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic" />

                <RadioButton
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>