<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favoriteFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".favorite_view.FavoriteView">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fav_cities_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/fav_city_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:focusable="true"
        android:src="@drawable/ic_round_add_24"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/search"
        android:focusable="true"
        android:src="@drawable/ic_round_search_24"
        android:visibility="invisible"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/add_floating"
        app:layout_constraintEnd_toEndOf="@+id/add_floating"
        app:layout_constraintStart_toStartOf="@+id/add_floating"
        app:maxImageSize="24dp"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/location_floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/add_location"
        android:focusable="true"
        android:src="@drawable/ic_round_add_location_alt_24"
        android:visibility="invisible"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/search_floating"
        app:layout_constraintEnd_toEndOf="@+id/add_floating"
        app:layout_constraintStart_toStartOf="@+id/search_floating"
        app:maxImageSize="30dp"
        app:tint="@color/white"
        app:useCompatPadding="false" />
</androidx.constraintlayout.widget.ConstraintLayout>