<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="location"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/location_group"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/location_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_title">

                <RadioButton
                    android:id="@+id/gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="gps"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="map"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1">

            <TextView
                android:id="@+id/units_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/units"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/units_group"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/units_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/units_title">

                <RadioButton
                    android:id="@+id/metric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/metric"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/imperial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imperial"
                    android:textColor="#FFFFFF" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/language_title"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/language_group"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/language_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_title">

                <RadioButton
                    android:id="@+id/arabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="العربيه"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="english"
                    android:textColor="#FFFFFF" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>